# sum_factorization_kernels

./: CMakeLists.txt  README.md
include/: evaluation_cell_face_laplacian.h  evaluation_cell_laplacian.h  evaluation_cell_laplacian_no_vec.h  evaluation_cell_laplacian_scalar_coef.h  evaluation_cell_laplacian_vec_ele.h  evaluation_cell_laplacian_vec_quadrant.h  evaluation_cell_laplacian_vec_quadrant_tile.h  evaluation_dg_advect.h  evaluation_dg_laplacian.h  evaluation_dg_laplacian_novec.h  evaluation_dgele_advect.h  evaluation_dgele_laplacian.h  matrix_vector_kernel.h  precomputed_dg_laplacian.h  vectorization.h
src/: benchmark_loops.cc  micro_test.cc  test_dg_advect.cc  test_dg_integrate.cc  test_dg_integrate_novec.cc  test_dg_precomputed.cc  test_program.cc  test_program_vect.cc
